welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:1: error: Missing closing brace `}' assumed here
var nbBiscuit = 0
^Poucet:7: error: ')' expected but 'if' found.
  	if (nbBiscuit==3) {
        ^Poucet:13: error: ';' expected but 'if' found.
  if (sortieTrouvee(){
  ^